--- a/config/database.yml
+++ b/config/database.yml
@@ -3,29 +3,29 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-#development:
-#  adapter: sqlite3
-#  database: db/development.sqlite3
-#  pool: 5
-#  timeout: 5000
+development:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
 #
 ## Warning: The database defined as "test" will be erased and
 ## re-generated from your development database when you run "rake".
 ## Do not set this db to the same as development or production.
-development:
-    adapter: postgresql
-    encoding: unicode
-    host: localhost
-    database: rooms_development
-    pool: 5
-    username: rooms
-    password: rooms
+#development:
+#    adapter: postgresql
+#    encoding: unicode
+#    host: localhost
+#    database: rooms_development
+#    pool: 5
+#    username: rooms
+#    password: rooms
 
-#test:
-#  adapter: sqlite3
-#  database: db/test.sqlite3
-#  pool: 5
-#  timeout: 5000
+test:
+  adapter: sqlite3
+  database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
 #
 #production:
 #  adapter: sqlite3
@@ -51,14 +51,14 @@ development:
 #    username: rooms
 #    password: rooms
 
-test:
-  adapter: postgresql
-  encoding: unicode
-  host: localhost
-  database: rooms_test
-  pool: 5
-  username: rooms
-  password: rooms
+#test:
+#  adapter: postgresql
+#  encoding: unicode
+#  host: localhost
+#  database: rooms_test
+#  pool: 5
+#  username: rooms
+#  password: rooms
 
 production:
   adapter: postgresql
