--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -26,7 +26,7 @@ development:
   api_key: '334878688366951'
   api_secret: vW42q_EtOB9A2UedZ5SSfJxAxRM
   enhance_image_tag: true
-  static_image_support: false
+  static_image_support: true
 production:
   cloud_name: hpdnx5ayv
   api_key: '334878688366951'
@@ -38,4 +38,4 @@ test:
   api_key: '334878688366951'
   api_secret: vW42q_EtOB9A2UedZ5SSfJxAxRM
   enhance_image_tag: true
-  static_image_support: false
+  static_image_support: true
