fix the password

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,11 +1,13 @@
 ROOMS_FACEBOOK_APP_ID: "330390967090243"
 ROOMS_FACEBOOK_SECRET: "e9219fdebaee11b16d845cc000d78797"
 
-ROOMS_MAIL_PASSWORD_DEV: "SClara_1975"
+#ROOMS_MAIL_PASSWORD_DEV: "SClara_1975"
+ROOMS_MAIL_PASSWORD_DEV: "Trillionaire!1"
 ROOMS_MAIL_USERNAME_DEV: "mywebroom@mywebroom.com"
 ROOMS_MAIL_HOST_DEV: "localhost:3000"
 
-ROOMS_MAIL_PASSWORD_PRO: "SClara_1975"
+#ROOMS_MAIL_PASSWORD_PRO: "SClara_1975"
+ROOMS_MAIL_PASSWORD_PRO: "Trillionaire!1"
 ROOMS_MAIL_USERNAME_PRO: "mywebroom@mywebroom.com"
 #ROOMS_MAIL_HOST_PRO: "sleepy-scrubland-1880.herokuapp.com"
 #ROOMS_MAIL_HOST_PRO: "staging-mywebroom.herokuapp.com"
