Changes postgres info for test / travis

--- a/config/database.yml
+++ b/config/database.yml
@@ -53,12 +53,10 @@ development:
 
 test:
   adapter: postgresql
-  encoding: unicode
-  host: localhost
   database: rooms_test
-  pool: 5
-  username: rooms
-  password: rooms
+  username: postgres
+
+
 
 production:
   adapter: postgresql
