--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,8 @@ rvm:
 before_script:
   - psql -c 'create database rooms_test;' -U postgres
 
+addons:
+  postgresql: "9.3"
+
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
