--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_script:
   - psql -c "CREATE USER rooms WITH PASSWORD 'rooms';" -U postgres
   - psql -c 'create database rooms_test;' -U postgres
   - psql -c 'GRANT ALL PRIVILEGES ON DATABASE rooms_test to rooms'; -U postgres
-  - rake db:migrate
+  - bundle exec rake db:migrate
 
 addons:
   postgresql: "9.3"
