fix travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ rvm:
 
 before_script:
   - psql -c "CREATE USER rooms WITH PASSWORD 'rooms';" -U postgres
-  - psql -c 'create database rooms_test;' -U postgres
-  - psql -c 'GRANT ALL PRIVILEGES ON DATABASE rooms_test to rooms'; -U postgres
+  - psql -c "CREATE DATABASE rooms_test;" -U postgres
+  - psql -c "GRANT ALL PRIVILEGES ON DATABASE rooms_test to rooms;" -U postgres
   - bundle exec rake db:migrate
 
 addons:
