--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ rvm:
   - "2.0.0"
 
 before_script:
-  - psql -c "CREATE USER rooms WITH PASSWORD 'rooms';" -U postgres
-  - psql -c "CREATE DATABASE rooms_test;" -U postgres
-  - psql -c "GRANT ALL PRIVILEGES ON DATABASE rooms_test to rooms;" -U postgres
+  - psql -c 'create database myapp_test;' -U postgres
+
+  #- psql -c "CREATE USER rooms WITH PASSWORD 'rooms';" -U postgres
+  #- psql -c "CREATE DATABASE rooms_test;" -U postgres
+  #- psql -c "GRANT ALL PRIVILEGES ON DATABASE rooms_test to rooms;" -U postgres
   - bundle exec rake db:migrate
 
 addons:
