--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,8 @@ addons:
 
 cache: bundler
 
+
+script: CODECLIMATE_REPO_TOKEN=de58995f211cd6a4d351744bed6cbce8985aec0d4ea5621e0795b202cc74a25a bundle exec rake
+
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
