--- a/config/database.yml
+++ b/config/database.yml
@@ -53,9 +53,13 @@ development:
 
 test:
   adapter: postgresql
+  encoding: unicode
   database: myapp_test
+  pool: 5
   host: localhost
   username: postgres
+  password:
+  min_messages: WARNING
 
 
 
