--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   #- psql -c "CREATE USER rooms WITH PASSWORD 'rooms';" -U postgres
   #- psql -c "CREATE DATABASE rooms_test;" -U postgres
   #- psql -c "GRANT ALL PRIVILEGES ON DATABASE rooms_test to rooms;" -U postgres
-  - bundle exec rake db:migrate
+  - bundle exec rake db:schema:load
 
 addons:
   postgresql: "9.3"
